--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 
 .mycontainer{
-    padding-right: 0;
-    padding-left: 0;
-    margin-right: 0;
-    margin-left: 0;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 100%;
     
 }
 
@@ -20,5 +21,7 @@
     padding-left: 15px;
 }
 .city-display{
-    
+    padding-left: 30px;
+    padding-top: 50px;
+    padding-bottom: 40px;
 }
